# fastapi-auth

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yaml  justfile  pyproject.toml
.claude/: settings.json
app/: api.py
app/core/: env.py  telemetry.py
app/core/api_keys/: dependencies.py
app/core/api_keys/adapters/: __init__.py  api_key_repository_sql.py
app/core/api_keys/entities/: api_key.py
app/core/api_keys/errors/: __init__.py  api_key_not_found_error.py  invalid_api_key_format_error.py
app/core/api_keys/http/: __init__.py  api_key_router.py
app/core/api_keys/ports/: __init__.py  api_key_repository.py
app/core/api_keys/schemas/: __init__.py  api_key_schemas.py
app/core/api_keys/services/: __init__.py  api_key_service.py
app/core/auth/: dependencies.py
app/core/auth/adapters/: __init__.py  auth_flow_provider_http.py
app/core/auth/entities/: __init__.py  flow.py
app/core/auth/http/: router.py
app/core/auth/ports/: __init__.py  auth_flow_provider.py
app/core/auth/services/: __init__.py  auth_flow_service.py
app/core/authn/: __init__.py  dependencies.py  get_current_user.py  router.py  security.py  webhooks.py
app/core/authn/adapters/: __init__.py  session_provider_kratos.py  token_provider_hydra.py  user_repository_sql.py
app/core/authn/entities/: __init__.py  session.py  user.py
app/core/authn/errors/: __init__.py  auth_provider_unavailable_error.py  invalid_session_error.py  missing_session_token_error.py  user_already_exists_error.py  user_not_found_error.py  user_not_registered_error.py
app/core/authn/http/: __init__.py  router.py  webhooks.py
app/core/authn/ports/: __init__.py  session_provider.py  token_provider.py  user_repository.py
app/core/authn/schemas/: __init__.py  kratos.py  user.py
app/core/authn/services/: auth_service.py  user_service.py
app/core/authz/: __init__.py  dependencies.py
app/core/authz/adapters/: __init__.py  authz_provider_keto.py
app/core/authz/entities/: __init__.py  permission.py
app/core/authz/ports/: __init__.py  authz_provider.py
app/core/authz/services/: __init__.py  authz_service.py
app/core/database/: __init__.py  engine.py
app/core/database/models/: __init__.py  api_key_table.py  base.py  user_table.py
app/core/oauth2/: dependencies.py
app/core/oauth2/adapters/: __init__.py  hydra_provider_hydra.py  oauth2_challenge_provider_http.py
app/core/oauth2/entities/: __init__.py  challenge.py
app/core/oauth2/errors/: __init__.py  hydra_unavailable_error.py  invalid_challenge_error.py
app/core/oauth2/http/: router.py
app/core/oauth2/ports/: __init__.py  hydra_provider.py  oauth2_challenge_provider.py
app/core/oauth2/services/: __init__.py  oauth2_service.py
app/core/shared/: errors.py
app/utils/: pagination_utils.py  sql_utils.py  time_utils.py
hydra/config/: hydra.env.example.yml  hydra.yml
keto/config/: keto.env.example.yml  keto.yml  namespaces.ts
kratos/config/: identity.schema.json  kratos.env.example.yml  kratos.yml
migrations/: env.py
migrations/versions/: 106c60afd922_name_user_table_timestamps_with_timezone.py  762efb267d62_name_verify_clean.py  940fffd1ff54_name_create_user.py  b8ce26d1fb0c_create_user.py
observability/alloy/: config.alloy
observability/grafana/provisioning/datasources/: datasources.yml
observability/loki/: loki.yml
observability/tempo/: tempo.yml
postgres/: init.sql
requests/: api.http  auth.http
static/: oauth2.css
templates/auth/: login.html  registration.html  setup_profile.html
templates/oauth2/: consent.html  login.html
tests/: conftest.py
